making the player-actions float left, to avoid jumping all other elements up and down which causes an annoying effect

--- a/src/cardshifter.css
+++ b/src/cardshifter.css
@@ -242,3 +242,6 @@ th {
     background-color: #00ffff;
 }
 
+.player-actions {
+    float: left; // helps avoid annoying flickering of cards when performing actions by keeping this in the same place
+}
